feat: shopping lists API
